--- a/index.html
+++ b/index.html
@@ -75,57 +75,50 @@
    <!-- ================= New Eco-system section ================= -->
   
 
-<section class="core-pillars-expanded">
+<section class="hr-infrastructure">
   <div class="container">
-    <h2 class="section-title">The Lakeside Ecosystem: Core Pillars</h2>
-    <p class="section-subtitle">Modern organizational challenges are systemic, not siloed. We operate at the convergence of systems engineering and clinical psychology.</p>
+    <h2 class="section-title">Integrated HR Infrastructure</h2>
+    <p class="section-subtitle">
+      We optimize the "Human Capital Equation" by bridging systems engineering with clinical rigor. 
+      Lakeside Human Capital ensures your organization is scale-ready and your people are soul-ready.
+    </p>
 
-    <div class="pillars-grid-v6">
-      <div class="pillar-v6-card">
-        <span class="v-tag">V1</span>
-        <h3>Lakeside Health</h3>
-        <p class="tagline">Mental Wellness & EAP</p>
-        <p>A clinical <strong>Stepped-Care Model</strong> with a dedicated in-house roster of 100+ clinicians. We translate utilization into P&L impact through CFO-ready dashboards.</p>
-      </div>
-
-      <div class="pillar-v6-card">
-        <span class="v-tag">V2</span>
-        <h3>Lakeside Happiness</h3>
-        <p class="tagline">Scientific Audits</p>
-        <p>Evidence-based roadmaps utilizing the <strong>PERMA framework</strong> and the <strong>Job Demands-Resources Model</strong> to identify specific cultural fracture points.</p>
-      </div>
-
-      <div class="pillar-v6-card">
-        <span class="v-tag">V3</span>
+    <div class="infrastructure-grid">
+      <div class="infra-card main-pillar">
+        <span class="pillar-label">Core Infrastructure</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="tagline">Outsourced CHRO</p>
-        <p>Building a scalable "People OS" for growth-stage enterprises. We handle the full lifecycle while deploying tech stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
+        <p class="tagline">Virtual CHRO & People OS</p>
+        <p>Fractional Human Capital leadership building a scalable "People OS". We manage the full lifecycle from hire to retire, resulting in a <strong>40% reduction in Time-to-Hire</strong>.</p>
+        <ul class="infra-list">
+          <li>Fractional HR Leadership</li>
+          <li>Strategic Tech-Stack Deployment</li>
+          <li>Global Compliance (India & GCC)</li>
+        </ul>
       </div>
 
-      <div class="pillar-v6-card">
-        <span class="v-tag">V4</span>
+      <div class="infra-card">
+        <span class="pillar-label">Mental Wellness</span>
+        <h3>Lakeside Health</h3>
+        <p>Clinical-standard wellbeing via a dedicated roster of 100+ clinicians. We deploy a <strong>Stepped-Care Model</strong> to reduce burnout and absenteeism.</p>
+        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">View Detailed Health Site →</a>
+      </div>
+
+      <div class="infra-card">
+        <span class="pillar-label">Scientific Audits</span>
+        <h3>Lakeside Happiness</h3>
+        <p>Moving beyond "satisfaction surveys" with psychometric diagnostics. We use the <strong>PERMA framework</strong> to identify cultural fracture points.</p>
+        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">View Detailed Happiness Site →</a>
+      </div>
+
+      <div class="infra-card">
+        <span class="pillar-label">Cognitive Health</span>
         <h3>Lakeside BreathEasier</h3>
-        <p class="tagline">Cognitive Performance Infrastructure</p>
-        <p>Optimizing "Biological Hardware" by addressing <strong>CO2 Cliffs</strong> (>1000ppm) that degrade executive function. Infrastructure-as-a-Service for peak mental acuity.</p>
-      </div>
-
-      <div class="pillar-v6-card">
-        <span class="v-tag">V5</span>
-        <h3>Lakeside Technologies</h3>
-        <p class="tagline">Co-Development</p>
-        <p>Turning internal workflows into <strong>licensable Intellectual Property</strong>. We build bespoke digital assets, from industrial IoT for safety to AI-driven attrition models.</p>
-      </div>
-
-      <div class="pillar-v6-card">
-        <span class="v-tag">V6</span>
-        <h3>Lakeside Academy</h3>
-        <p class="tagline">Future-Proofing</p>
-        <p>Strategic agility through <strong>High-Impact Cohorts</strong> focusing on middle management and High-Potentials (HiPos) for the age of AI.</p>
+        <p>Optimizing "Biological Hardware" through medical-grade air filtration. We prevent the <strong>CO2 Cliff</strong> that degrades executive focus.</p>
+        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">View Detailed BreathEasier Site →</a>
       </div>
     </div>
   </div>
 </section>
-
 
 <!------------ Growth Dilemma for SMEs -------------->
 
