--- a/index.html
+++ b/index.html
@@ -77,44 +77,46 @@
 
 <section class="hr-infrastructure">
   <div class="container">
-    <h2 class="section-title">Integrated HR Infrastructure</h2>
+    <h2 class="section-title">The Integrated HR Infrastructure</h2>
     <p class="section-subtitle">
-      We optimize the "Human Capital Equation" by bridging systems engineering with clinical rigor. 
-      Lakeside Human Capital ensures your organization is scale-ready and your people are soul-ready.
+      Modern organizational challenges are systemic, not siloed. We bridge systems engineering 
+      with clinical psychology to ensure your people are scale-ready and soul-ready.
     </p>
 
-    <div class="infrastructure-grid">
-      <div class="infra-card main-pillar">
-        <span class="pillar-label">Core Infrastructure</span>
+    <div class="infrastructure-row">
+      <div class="infra-card highlight-navy">
+        <span class="v-tag">V3</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="tagline">Virtual CHRO & People OS</p>
-        <p>Fractional Human Capital leadership building a scalable "People OS". We manage the full lifecycle from hire to retire, resulting in a <strong>40% reduction in Time-to-Hire</strong>.</p>
-        <ul class="infra-list">
+        <p class="punchline">The People OS for Growth.</p>
+        <p class="description">Fractional CHRO leadership building scalable infrastructure and tech-stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
+        <ul class="mini-list">
           <li>Fractional HR Leadership</li>
-          <li>Strategic Tech-Stack Deployment</li>
-          <li>Global Compliance (India & GCC)</li>
+          <li>Strategic Compliance</li>
         </ul>
       </div>
 
       <div class="infra-card">
-        <span class="pillar-label">Mental Wellness</span>
+        <span class="v-tag">V1</span>
         <h3>Lakeside Health</h3>
-        <p>Clinical-standard wellbeing via a dedicated roster of 100+ clinicians. We deploy a <strong>Stepped-Care Model</strong> to reduce burnout and absenteeism.</p>
-        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">View Detailed Health Site →</a>
+        <p class="punchline">Clinical Standard, Not App-First.</p>
+        <p class="description">Deploying a <strong>Stepped-Care Model</strong> with 100+ clinicians to translate wellness into measurable P&L impact.</p>
+        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
 
       <div class="infra-card">
-        <span class="pillar-label">Scientific Audits</span>
+        <span class="v-tag">V2</span>
         <h3>Lakeside Happiness</h3>
-        <p>Moving beyond "satisfaction surveys" with psychometric diagnostics. We use the <strong>PERMA framework</strong> to identify cultural fracture points.</p>
-        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">View Detailed Happiness Site →</a>
+        <p class="punchline">Diagnostic Rigor. Evidence-Based.</p>
+        <p class="description">Moving beyond surveys with <strong>PERMA diagnostics</strong> to identify cultural fracture points and hidden stressors.</p>
+        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
 
       <div class="infra-card">
-        <span class="pillar-label">Cognitive Health</span>
+        <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
-        <p>Optimizing "Biological Hardware" through medical-grade air filtration. We prevent the <strong>CO2 Cliff</strong> that degrades executive focus.</p>
-        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">View Detailed BreathEasier Site →</a>
+        <p class="punchline">Optimizing the Biological Hardware.</p>
+        <p class="description">Addressing the <strong>"CO2 Cliff"</strong> (>1000ppm) with medical-grade filtration to ensure peak cognitive performance.</p>
+        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
     </div>
   </div>
