--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
     <div class="infrastructure-row">
       <div class="infra-card highlight-navy">
-        <span class="v-tag">V3</span>
+        <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="punchline">The People OS for Growth.</p>
+        <p class="punchline">Operational Excellence. From Hire to Retire</p>
         <p class="description">Fractional CHRO leadership building scalable infrastructure and tech-stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
         <ul class="mini-list">
           <li>Fractional HR Leadership</li>
