--- a/index.html
+++ b/index.html
@@ -73,21 +73,36 @@
 
 
    <!-- ================= New Eco-system section ================= -->
-  
 
-<section class="hr-infrastructure">
+ <section class="hr-infrastructure">
   <div class="container">
-    <h2 class="section-title">The Integrated HR Infrastructure</h2>
-    <p class="section-subtitle">
-      Modern organizational challenges are systemic, not siloed. We bridge systems engineering 
-      with clinical psychology to ensure your people are scale-ready and soul-ready.
-    </p>
+    <div class="chain-narrative">
+      <h2 class="narrative-heading">Healthy Systems. Happy People. Clean Air.</h2>
+      <p class="punchy-subline">Engineered as one integrated infrastructure.</p>
+      
+      <div class="logic-chain">
+        <div class="chain-item">
+          <span class="chain-icon">🏗️</span>
+          <p><strong>Organization:</strong> Solving structural gaps through Human Capital.</p>
+        </div>
+        <div class="chain-arrow">→</div>
+        <div class="chain-item">
+          <span class="chain-icon">🧠</span>
+          <p><strong>People:</strong> Nurturing mental health & happiness with clinical rigor.</p>
+        </div>
+        <div class="chain-arrow">→</div>
+        <div class="chain-item">
+          <span class="chain-icon">🌬️</span>
+          <p><strong>Environment:</strong> Optimizing air quality for cognitive focus.</p>
+        </div>
+      </div>
+    </div>
 
     <div class="infrastructure-row">
       <div class="infra-card highlight-navy">
-        <span class="v-tag">V1</span>
+        <span class="v-tag">V3</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="punchline">Operational Excellence. From Hire to Retire</p>
+        <p class="punchline">Solving Organizational Gaps through Systems Engineering.</p>
         <p class="description">Fractional CHRO leadership building scalable infrastructure and tech-stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
         <ul class="mini-list">
           <li>Fractional HR Leadership</li>
@@ -96,17 +111,17 @@
       </div>
 
       <div class="infra-card">
-        <span class="v-tag">V2</span>
+        <span class="v-tag">V1</span>
         <h3>Lakeside Health</h3>
-        <p class="punchline">Clinical Standard, Not App-First.</p>
+        <p class="punchline">Clinical Wellness for Resilient Minds.</p>
         <p class="description">Deploying a <strong>Stepped-Care Model</strong> with 100+ clinicians to translate wellness into measurable P&L impact.</p>
         <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
 
       <div class="infra-card">
-        <span class="v-tag">V3</span>
+        <span class="v-tag">V2</span>
         <h3>Lakeside Happiness</h3>
-        <p class="punchline">Diagnostic Rigor. Evidence-Based.</p>
+        <p class="punchline">Scientific Audits for Culture & Joy.</p>
         <p class="description">Moving beyond surveys with <strong>PERMA diagnostics</strong> to identify cultural fracture points and hidden stressors.</p>
         <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
@@ -114,7 +129,7 @@
       <div class="infra-card">
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
-        <p class="punchline">Optimizing the Biological Hardware.</p>
+        <p class="punchline">Optimizing the Environment for Peak Performance.</p>
         <p class="description">Addressing the <strong>"CO2 Cliff"</strong> (>1000ppm) with medical-grade filtration to ensure peak cognitive performance.</p>
         <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
       </div>
@@ -122,6 +137,7 @@
   </div>
 </section>
 
+  
 <!------------ Growth Dilemma for SMEs -------------->
 
 <section class="growth-dilemma">
