--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="founder-info">
           <h3>Rohit Nalwade</h3>
           <span class="founder-role">Co-Founder | Systems Architect & Psychologist</span>
-          <p>The bridge between **IIT-level systems thinking** and **TISS-level clinical rigor**. With 20+ years in enterprise technology and a deep foundation in psychology, Rohit designs the "Biological Hardware" and cognitive frameworks that ensure organizations are both scalable and mentally resilient.</p>
+          <p>The bridge between **IIT-level systems thinking** and TISS-level clinical rigor. With 20+ years in enterprise technology and a deep foundation in psychology, Rohit designs the "Biological Hardware" and cognitive frameworks that ensure organizations are both scalable and mentally resilient.</p>
         </div>
       </div>
 
@@ -422,7 +422,7 @@
         <div class="founder-info">
           <h3>Sweety Vasani</h3>
           <span class="founder-role">Co-Founder | HR Strategist & Psychometric Assessor</span>
-          <p>The driving force behind **"Soul-Ready" cultures**. A seasoned HR leader, counselor, and **Certified Psychometric Assessor**, Sweety translates complex human data into people-first strategies. She ensures that employee well-being and organizational health are treated as two sides of the same coin.</p>
+          <p>The driving force behind "Soul-Ready" cultures. A seasoned HR leader, counselor, and Certified Psychometric Assessor, Sweety translates complex human data into people-first strategies. She ensures that employee well-being and organizational health are treated as two sides of the same coin.</p>
         </div>
       </div>
     </div>
