--- a/index.html
+++ b/index.html
@@ -334,62 +334,54 @@
   </div>
 </section>
 
-  
+
+  <!-- ================= WHY US ================= -->
+
    
 
-     <!-- ================= WHY US Section ================= -->
-   <!-- Why Us Section -->
-<section id="why-us" class="why-us">
-  
-  <!-- Trust / Expertise -->
-  <div class="trust">
-    <h2>The Expertise You Need, The Partnership You Want</h2>
-    <p>We're more than consultants; we're your strategic partners in growth, combining deep experience with a commitment to your success.</p>
-    <p class="trust-subtitle">TRUSTED BY INDUSTRY LEADERS ACROSS INDIA & THE MIDDLE EAST</p>
-   <div class="trust-logos">
-  <img src="assets/images/logo/reliance1.png" alt="Reliance" class="logo-img">
-  <img src="assets/images/logo/emmar1.png" alt="Emaar" class="logo-img">
-  <img src="assets/images/logo/tata1.png" alt="TATA" class="logo-img">
-  <img src="assets/images/logo/sabic1.png" alt="SABIC" class="logo-img">
-  <img src="assets/images/logo/mahindra1.png" alt="Mahindra" class="logo-img">
-  <img src="assets/images/logo/emirates1.png" alt="Emirates" class="logo-img">
-</div>
-  </div>
+  <section id="why-us" class="lakeside-advantage">
+  <div class="container">
+    <div class="advantage-wrapper">
+      <div class="advantage-text">
+        <h2 class="section-title">The Lakeside Advantage</h2>
+        <p class="lead-text">Engineering organizational resilience through a unique multidisciplinary lens.</p>
+        
+        <div class="advantage-item">
+          <span class="check-icon">✔</span>
+          <div class="item-content">
+            <h3>Systems Engineering x Clinical Psychology</h3>
+            <p>We don't just "do HR." We apply IIT-level systems architecture to your infrastructure and TISS-level clinical rigor to your people.</p>
+          </div>
+        </div>
 
-  <!-- Why Partner With Us -->
-  <div class="why-us-container">
-    <!-- Left column -->
-    <div class="why-us-text">
-      <h2>Why Partner With Us?</h2>
-      <div class="why-item">
-        <span class="icon">✔</span>
-        <div>
-          <h3>Expert-Led, Tech-Powered</h3>
-          <p>Founded on a unique synergy of deep-domain HR leadership and enterprise-level technology expertise.</p>
+        <div class="advantage-item">
+          <span class="check-icon">✔</span>
+          <div class="item-content">
+            <h3>Measurable P&L Impact</h3>
+            <p>Our "CFO-Ready" dashboards move beyond soft metrics to show a 40% reduction in Time-to-Hire and measurable ROI on wellness.</p>
+          </div>
         </div>
-      </div>
-      <div class="why-item">
-        <span class="icon">✔</span>
-        <div>
-          <h3>The Right Tech, Not Just More Tech</h3>
-          <p>We provide a curated, cost-effective suite of HR technology designed for the scale and challenges of SMEs.</p>
-        </div>
-      </div>
-      <div class="why-item">
-        <span class="icon">✔</span>
-        <div>
-          <h3>Regional Mastery</h3>
-          <p>Intricate understanding of the complex compliance and talent landscapes in both India and the GCC.</p>
-        </div>
-      </div>
-    </div>
 
-    <!-- Right column (Rotating proof-points) -->
-    <div class="why-us-highlight" id="proof-rotator">
-      <h2>40%</h2>
-      <h3>Reduction in Time-to-Hire</h3>
-      <p>Our tech-enabled approach saves you critical time and resources in finding top talent.</p>
-      <div class="progress-bar"></div>
+        <div class="advantage-item">
+          <span class="check-icon">✔</span>
+          <div class="item-content">
+            <h3>Regional Mastery (India & GCC)</h3>
+            <p>Deep expertise in navigating the complex compliance, labor laws, and talent landscapes of both the Indian and Middle Eastern markets.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="trust-logos-block">
+        <p class="logo-title">TRUSTED BY INDUSTRY LEADERS</p>
+        <div class="logo-grid">
+          <img src="assets/images/logo/reliance1.png" alt="Reliance">
+          <img src="assets/images/logo/emaar1.png" alt="Emaar">
+          <img src="assets/images/logo/tata1.png" alt="TATA">
+          <img src="assets/images/logo/sabic1.png" alt="SABIC">
+          <img src="assets/images/logo/mahindra1.png" alt="Mahindra">
+          <img src="assets/images/logo/emirates1.png" alt="Emirates">
+        </div>
+      </div>
     </div>
   </div>
 </section>
