--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
     </ul>
   </nav>
   
+<!-- Hero -->
+  
 <section id="home" class="hero">
   <div class="hero-content">
-    <h1>Integrated Infrastructure for Organizational & Human Well-being</h1>
-    <p>Where IIT-level technical architecture meets TISS-level clinical rigor. 
-       We ensure your organization is scale-ready and your people are soul-ready through strategic HR, 
-       clinical mental wellness, and cognitive infrastructure.</p>
-    <div class="hero-btns">
-      <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-min Consultation</a>
-      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
-    </div>
+    <h1>Is Your Organization Growing — While Your People Are Burning Out?</h1>
+    <br class="heading-break" aria-hidden="true" />
+    <p>Lakeside Human Capital combines advanced HR strategy, clinical mental wellness, and optimized workplace environments to create high-performance organizations where growth and wellbeing go hand in hand.</p>
+    <br class="heading-break" aria-hidden="true" />
+    <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Consultation</a>
+    <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
   </div>
 </section>
 
