--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
  <section class="hr-infrastructure">
   <div class="container">
     <div class="chain-narrative">
-      <h2 class="narrative-heading">Healthy Systems. Happy People. Clean Air.</h2>
-      <p class="punchy-subline">Engineered as one integrated infrastructure.</p>
+      <h2 class="narrative-heading">Engineering an Integrated Infrastructure for Organizational Performance</h2>
+      <p class="punchy-subline">We align HR systems, evidence-based mental wellness, and optimized workplace environments into one intelligent ecosystem — delivering measurable performance outcomes as organizations scale.</p>
       
       <div class="logic-chain">
         <div class="chain-item">
           <span class="chain-icon">🏗️</span>
-          <p><strong>Organization:</strong> Solving structural gaps through Human Capital.</p>
+          <p><strong>Organization:</strong> Designing scalable HR architectures that eliminate structural bottlenecks and accelerate growth.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🧠</span>
-          <p><strong>People:</strong> Nurturing mental health & happiness with clinical rigor.</p>
+          <p><strong>People:</strong> Strengthening workforce resilience through clinically grounded, data-driven mental wellness frameworks.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🌬️</span>
-          <p><strong>Environment:</strong> Optimizing air quality for cognitive focus.</p>
+          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance cognitive performance and productivity.</p>
         </div>
       </div>
     </div>
@@ -102,36 +102,36 @@
       <div class="infra-card highlight-navy">
         <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="punchline">Solving Organizational Gaps through Systems Engineering.</p>
-        <p class="description">Fractional CHRO leadership building scalable infrastructure and tech-stacks that result in a <strong>40% reduction in Time-to-Hire</strong>.</p>
+        <p class="punchline">Engineering Scalable HR Infrastructure</p>
+        <p class="description">We design integrated HR systems that convert people operations into measurable business performance. From fractional CHRO leadership to automated compliance and talent architecture, we build the operational backbone organizations need to scale with confidence.</p>
         <ul class="mini-list">
-          <li>Fractional HR Leadership</li>
-          <li>Strategic Compliance</li>
+          <li>Fractional CHRO & HR Strategy</li>
+          <li>Compliance Automation & Talent Systems</li>
         </ul>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V2</span>
         <h3>Lakeside Health</h3>
-        <p class="punchline">Clinical Wellness for Resilient Minds.</p>
-        <p class="description">Deploying a <strong>Stepped-Care Model</strong> with 100+ clinicians to translate wellness into measurable P&L impact.</p>
-        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
+        <p class="punchline">Clinical Mental Wellness for Workforce Performance</p>
+        <p class="description">We deliver evidence-based mental wellness programs that translate resilience into productivity. Using clinically grounded frameworks and stepped-care models, we support sustainable performance across the workforce.</p>
+        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V3</span>
         <h3>Lakeside Happiness</h3>
-        <p class="punchline">Scientific Audits for Culture & Joy.</p>
-        <p class="description">Moving beyond surveys with <strong>PERMA diagnostics</strong> to identify cultural fracture points and hidden stressors.</p>
-        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
+        <p class="punchline">Scientific Culture & Engagement Diagnostics</p>
+        <p class="description">We use psychometric and behavioral analytics to uncover hidden cultural stressors and engagement gaps. Organizations gain actionable intelligence that strengthens retention, collaboration, and performance.</p>
+        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
-        <p class="punchline">Optimizing the Environment for Peak Performance.</p>
-        <p class="description">Addressing the <strong>"CO2 Cliff"</strong> (>1000ppm) with medical-grade filtration to ensure peak cognitive performance.</p>
-        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">View Site →</a>
+        <p class="punchline">Environmental Infrastructure for Cognitive Performance</p>
+        <p class="description">We optimize workplace air quality and environmental conditions to enhance focus, alertness, and cognitive efficiency. Our solutions create healthier spaces that directly support high-performance work.</p>
+        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
       </div>
     </div>
   </div>
