--- a/index.html
+++ b/index.html
@@ -102,35 +102,35 @@
       <div class="infra-card highlight-navy">
         <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="punchline">Engineering Scalable HR Infrastructure</p>
-        <p class="description">We design integrated HR systems that convert people operations into measurable business performance. From fractional CHRO leadership to automated compliance and talent architecture, we build the operational backbone organizations need to scale with confidence.</p>
+        <p class="punchline">Re-engineering HR Into a Growth Engine</p>
+        <p class="description">We replace fragmented HR functions with performance-driven infrastructure that scales with your business. From strategic leadership to automated talent systems, we turn people operations into a competitive advantage.</p>
         <ul class="mini-list">
-          <li>Fractional CHRO & HR Strategy</li>
-          <li>Compliance Automation & Talent Systems</li>
+          <li>Fractional CHRO Leadership</li>
+          <li>Intelligent HR Architecture</li>
         </ul>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V2</span>
         <h3>Lakeside Health</h3>
-        <p class="punchline">Clinical Mental Wellness for Workforce Performance</p>
-        <p class="description">We deliver evidence-based mental wellness programs that translate resilience into productivity. Using clinically grounded frameworks and stepped-care models, we support sustainable performance across the workforce.</p>
+        <p class="punchline">Turning Mental Wellness Into Performance Power</p>
+        <p class="description">We apply clinical science to strengthen workforce resilience and unlock sustained productivity. Our evidence-based frameworks convert wellbeing into measurable performance gains.</p>
         <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V3</span>
         <h3>Lakeside Happiness</h3>
-        <p class="punchline">Scientific Culture & Engagement Diagnostics</p>
-        <p class="description">We use psychometric and behavioral analytics to uncover hidden cultural stressors and engagement gaps. Organizations gain actionable intelligence that strengthens retention, collaboration, and performance.</p>
+        <p class="punchline">Decoding Culture Through Behavioral Intelligence</p>
+        <p class="description">We go beyond surveys to map the hidden dynamics shaping engagement and performance. Our psychometric diagnostics deliver actionable intelligence leaders can actually use.</p>
         <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
-        <p class="punchline">Environmental Infrastructure for Cognitive Performance</p>
-        <p class="description">We optimize workplace air quality and environmental conditions to enhance focus, alertness, and cognitive efficiency. Our solutions create healthier spaces that directly support high-performance work.</p>
+        <p class="punchline">Engineering Air for Cognitive Advantage</p>
+        <p class="description">We optimize environmental conditions to sharpen focus, energy, and brain performance. Because high-performing teams need high-performing spaces.</p>
         <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
       </div>
     </div>
