--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
       <div class="logic-chain">
         <div class="chain-item">
           <span class="chain-icon">🏗️</span>
-          <p><strong>Organization:</strong> Designing scalable HR architectures that eliminate structural bottlenecks and accelerate growth.</p>
+          <p><strong>Organization:</strong> Designing scalable HR architectures that eliminate structural bottlenecks and unlock growth.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🧠</span>
-          <p><strong>People:</strong> Strengthening workforce resilience through clinically grounded, data-driven mental wellness frameworks.</p>
+          <p><strong>People:</strong> Strengthening workforce resilience through clinically grounded, data-driven mental wellness.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🌬️</span>
-          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance cognitive performance and productivity.</p>
+          <p><strong>Environment:</strong> Optimizing workplace conditions to sharpen focus and cognitive efficiency.</p>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
         <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
         <p class="punchline">Re-engineering HR Into a Growth Engine</p>
-        <p class="description">We replace fragmented HR functions with performance-driven infrastructure that scales with your business. From strategic leadership to automated talent systems, we turn people operations into a competitive advantage.</p>
+        <p class="description">We replace fragmented HR functions with scalable infrastructure that supports expansion. From strategic leadership to intelligent talent systems, we turn people operations into a sustainable competitive advantage.</p>
         <ul class="mini-list">
           <li>Fractional CHRO Leadership</li>
           <li>Intelligent HR Architecture</li>
@@ -113,8 +113,8 @@
       <div class="infra-card">
         <span class="v-tag">V2</span>
         <h3>Lakeside Health</h3>
-        <p class="punchline">Turning Mental Wellness Into Performance Power</p>
-        <p class="description">We apply clinical science to strengthen workforce resilience and unlock sustained productivity. Our evidence-based frameworks convert wellbeing into measurable performance gains.</p>
+        <p class="punchline">Turning Mental Wellness Into Workforce Resilience</p>
+        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate wellbeing into durable capability.</p>
         <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
       </div>
 
@@ -122,7 +122,7 @@
         <span class="v-tag">V3</span>
         <h3>Lakeside Happiness</h3>
         <p class="punchline">Decoding Culture Through Behavioral Intelligence</p>
-        <p class="description">We go beyond surveys to map the hidden dynamics shaping engagement and performance. Our psychometric diagnostics deliver actionable intelligence leaders can actually use.</p>
+        <p class="description">We uncover the hidden dynamics shaping engagement and collaboration. Our psychometric diagnostics deliver insights leaders can act on with precision.</p>
         <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
       </div>
 
@@ -130,7 +130,7 @@
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
         <p class="punchline">Engineering Air for Cognitive Advantage</p>
-        <p class="description">We optimize environmental conditions to sharpen focus, energy, and brain performance. Because high-performing teams need high-performing spaces.</p>
+        <p class="description">We design environments that sharpen focus and mental clarity. Because high-performing teams require spaces built for the brain.</p>
         <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
       </div>
     </div>
