--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   
 <section id="home" class="hero">
   <div class="hero-content">
-    <h1>Is Your Organization Growing — While Your People Are Burning Out?</h1>
+    <h1>Is Your HR Ready for the Next Phase of Growth?</h1>
     <br class="heading-break" aria-hidden="true" />
-    <p>Lakeside Human Capital combines advanced HR strategy, clinical mental wellness, and optimized workplace environments to create high-performance organizations where growth and wellbeing go hand in hand.</p>
+    <p>Stop firefighting and start building a strategic workforce. Lakeside Human Capital delivers enterprise-grade HR consulting powered by real-time people analytics and integrated wellbeing systems, turning people operations into a measurable competitive advantage.</p>
     <br class="heading-break" aria-hidden="true" />
     <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Consultation</a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
