--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <br class="heading-break" aria-hidden="true" />
     <p>Stop firefighting and start building a strategic workforce. Lakeside Human Capital delivers enterprise-grade HR consulting powered by real-time people analytics and integrated wellbeing systems, turning people operations into a measurable competitive advantage.</p>
     <br class="heading-break" aria-hidden="true" />
-    <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Consultation</a>
+    <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Strategy Call</a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
   </div>
 </section>
